// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AboutLeadBlock tests should not render if no awardsAndCertificates assets 1`] = `
<div>
  <div
    class="MuiGrid-root aboutLeadBlock LeadBlock MuiGrid-container MuiGrid-spacing-xs-3"
  >
    <div
      class="MuiGrid-root LeadBlockContent MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-8"
    >
      <div
        class="LeadBlockContentSection"
      >
        <div
          class="MuiTypography-root Typography MuiTypography-body1"
        >
          <p>
            Long Dec System 1 NO
          </p>
        </div>
      </div>
      <div
        class="guaranteesAndAwardsAsset LeadBlockContentSection"
      >
        <h5
          class="MuiTypography-root LeadBlockContentHeading Typography MuiTypography-h5"
        >
          MC: sdp.leadBlock.guaranteesWarranties
        </h5>
        <img
          alt="Garanti Test"
          class="image"
          src="https://bmipimngqa.azureedge.net/sys-master-hybris-media/hc2/h3e/8972787286046/Monier-garanti-30-aarjpg"
        />
      </div>
    </div>
    <div
      class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-4"
    >
      <div
        class="ColorPair ColorPair--pearl"
      >
        <div
          class="PostItCard"
        >
          <div
            class="section"
          >
            <h4
              class="MuiTypography-root Typography MuiTypography-h4"
            >
              <h4
                class="MuiTypography-root Typography Typography--underline MuiTypography-h4"
              >
                Key Features
              </h4>
            </h4>
            <div
              class="content"
            >
              <ul
                class="IconList"
              >
                <li
                  class="ListItem ListItem--isCompact"
                >
                  <div
                    class="icon"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root blueCheckIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
                      />
                    </svg>
                  </div>
                  <div
                    class="content"
                  >
                    <p
                      class="MuiTypography-root title Typography MuiTypography-body1"
                    >
                      Sample KF value
                    </p>
                  </div>
                </li>
                <li
                  class="ListItem ListItem--isCompact"
                >
                  <div
                    class="icon"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root blueCheckIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
                      />
                    </svg>
                  </div>
                  <div
                    class="content"
                  >
                    <p
                      class="MuiTypography-root title Typography MuiTypography-body1"
                    >
                      Sample KF value 2
                    </p>
                  </div>
                </li>
              </ul>
            </div>
          </div>
          <div
            class="section"
          >
            <h4
              class="MuiTypography-root Typography MuiTypography-h4"
            >
              <h4
                class="MuiTypography-root Typography Typography--underline MuiTypography-h4"
              >
                MC: sdp.leadBlock.systemBenefits
              </h4>
            </h4>
            <div
              class="content"
            >
              <ul
                class="IconList"
              >
                <li
                  class="ListItem ListItem--isCompact"
                >
                  <div
                    class="icon"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root blueCheckIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
                      />
                    </svg>
                  </div>
                  <div
                    class="content"
                  >
                    <p
                      class="MuiTypography-root title Typography MuiTypography-body1"
                    >
                      Benefit value 1
                    </p>
                  </div>
                </li>
                <li
                  class="ListItem ListItem--isCompact"
                >
                  <div
                    class="icon"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root blueCheckIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
                      />
                    </svg>
                  </div>
                  <div
                    class="content"
                  >
                    <p
                      class="MuiTypography-root title Typography MuiTypography-body1"
                    >
                      Benefit value 2
                    </p>
                  </div>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AboutLeadBlock tests should not render if no guaranteesAndWarranties assets 1`] = `
<div>
  <div
    class="MuiGrid-root aboutLeadBlock LeadBlock MuiGrid-container MuiGrid-spacing-xs-3"
  >
    <div
      class="MuiGrid-root LeadBlockContent MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-8"
    >
      <div
        class="LeadBlockContentSection"
      >
        <div
          class="MuiTypography-root Typography MuiTypography-body1"
        >
          <p>
            Long Dec System 1 NO
          </p>
        </div>
      </div>
      <div
        class="guaranteesAndAwardsAsset LeadBlockContentSection"
      >
        <h5
          class="MuiTypography-root LeadBlockContentHeading Typography MuiTypography-h5"
        >
          MC: sdp.leadBlock.awardsCertificates
        </h5>
        <img
          alt="Award_Test"
          class="image"
          src="https://bmipimngqa.azureedge.net/sys-master-hybris-media/h88/h6b/9020240789534/Test-Awardpng"
        />
      </div>
    </div>
    <div
      class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-4"
    >
      <div
        class="ColorPair ColorPair--pearl"
      >
        <div
          class="PostItCard"
        >
          <div
            class="section"
          >
            <h4
              class="MuiTypography-root Typography MuiTypography-h4"
            >
              <h4
                class="MuiTypography-root Typography Typography--underline MuiTypography-h4"
              >
                Key Features
              </h4>
            </h4>
            <div
              class="content"
            >
              <ul
                class="IconList"
              >
                <li
                  class="ListItem ListItem--isCompact"
                >
                  <div
                    class="icon"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root blueCheckIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
                      />
                    </svg>
                  </div>
                  <div
                    class="content"
                  >
                    <p
                      class="MuiTypography-root title Typography MuiTypography-body1"
                    >
                      Sample KF value
                    </p>
                  </div>
                </li>
                <li
                  class="ListItem ListItem--isCompact"
                >
                  <div
                    class="icon"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root blueCheckIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
                      />
                    </svg>
                  </div>
                  <div
                    class="content"
                  >
                    <p
                      class="MuiTypography-root title Typography MuiTypography-body1"
                    >
                      Sample KF value 2
                    </p>
                  </div>
                </li>
              </ul>
            </div>
          </div>
          <div
            class="section"
          >
            <h4
              class="MuiTypography-root Typography MuiTypography-h4"
            >
              <h4
                class="MuiTypography-root Typography Typography--underline MuiTypography-h4"
              >
                MC: sdp.leadBlock.systemBenefits
              </h4>
            </h4>
            <div
              class="content"
            >
              <ul
                class="IconList"
              >
                <li
                  class="ListItem ListItem--isCompact"
                >
                  <div
                    class="icon"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root blueCheckIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
                      />
                    </svg>
                  </div>
                  <div
                    class="content"
                  >
                    <p
                      class="MuiTypography-root title Typography MuiTypography-body1"
                    >
                      Benefit value 1
                    </p>
                  </div>
                </li>
                <li
                  class="ListItem ListItem--isCompact"
                >
                  <div
                    class="icon"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root blueCheckIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
                      />
                    </svg>
                  </div>
                  <div
                    class="content"
                  >
                    <p
                      class="MuiTypography-root title Typography MuiTypography-body1"
                    >
                      Benefit value 2
                    </p>
                  </div>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AboutLeadBlock tests should not render if no keyFeatures 1`] = `
<div>
  <div
    class="MuiGrid-root aboutLeadBlock LeadBlock MuiGrid-container MuiGrid-spacing-xs-3"
  >
    <div
      class="MuiGrid-root LeadBlockContent MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-8"
    >
      <div
        class="LeadBlockContentSection"
      >
        <div
          class="MuiTypography-root Typography MuiTypography-body1"
        >
          <p>
            Long Dec System 1 NO
          </p>
        </div>
      </div>
      <div
        class="guaranteesAndAwardsAsset LeadBlockContentSection"
      >
        <h5
          class="MuiTypography-root LeadBlockContentHeading Typography MuiTypography-h5"
        >
          MC: sdp.leadBlock.guaranteesWarranties
        </h5>
        <img
          alt="Garanti Test"
          class="image"
          src="https://bmipimngqa.azureedge.net/sys-master-hybris-media/hc2/h3e/8972787286046/Monier-garanti-30-aarjpg"
        />
      </div>
      <div
        class="guaranteesAndAwardsAsset LeadBlockContentSection"
      >
        <h5
          class="MuiTypography-root LeadBlockContentHeading Typography MuiTypography-h5"
        >
          MC: sdp.leadBlock.awardsCertificates
        </h5>
        <img
          alt="Award_Test"
          class="image"
          src="https://bmipimngqa.azureedge.net/sys-master-hybris-media/h88/h6b/9020240789534/Test-Awardpng"
        />
      </div>
    </div>
    <div
      class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-4"
    >
      <div
        class="ColorPair ColorPair--pearl"
      >
        <div
          class="PostItCard"
        >
          <div
            class="section"
          >
            <h4
              class="MuiTypography-root Typography MuiTypography-h4"
            >
              <h4
                class="MuiTypography-root Typography Typography--underline MuiTypography-h4"
              >
                MC: sdp.leadBlock.systemBenefits
              </h4>
            </h4>
            <div
              class="content"
            >
              <ul
                class="IconList"
              >
                <li
                  class="ListItem ListItem--isCompact"
                >
                  <div
                    class="icon"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root blueCheckIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
                      />
                    </svg>
                  </div>
                  <div
                    class="content"
                  >
                    <p
                      class="MuiTypography-root title Typography MuiTypography-body1"
                    >
                      Benefit value 1
                    </p>
                  </div>
                </li>
                <li
                  class="ListItem ListItem--isCompact"
                >
                  <div
                    class="icon"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root blueCheckIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
                      />
                    </svg>
                  </div>
                  <div
                    class="content"
                  >
                    <p
                      class="MuiTypography-root title Typography MuiTypography-body1"
                    >
                      Benefit value 2
                    </p>
                  </div>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AboutLeadBlock tests should not render if no keyFeatures and systemBenefits 1`] = `
<div>
  <div
    class="MuiGrid-root aboutLeadBlock LeadBlock MuiGrid-container MuiGrid-spacing-xs-3"
  >
    <div
      class="MuiGrid-root LeadBlockContent MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-8"
    >
      <div
        class="LeadBlockContentSection"
      >
        <div
          class="MuiTypography-root Typography MuiTypography-body1"
        >
          <p>
            Long Dec System 1 NO
          </p>
        </div>
      </div>
      <div
        class="guaranteesAndAwardsAsset LeadBlockContentSection"
      >
        <h5
          class="MuiTypography-root LeadBlockContentHeading Typography MuiTypography-h5"
        >
          MC: sdp.leadBlock.guaranteesWarranties
        </h5>
        <img
          alt="Garanti Test"
          class="image"
          src="https://bmipimngqa.azureedge.net/sys-master-hybris-media/hc2/h3e/8972787286046/Monier-garanti-30-aarjpg"
        />
      </div>
      <div
        class="guaranteesAndAwardsAsset LeadBlockContentSection"
      >
        <h5
          class="MuiTypography-root LeadBlockContentHeading Typography MuiTypography-h5"
        >
          MC: sdp.leadBlock.awardsCertificates
        </h5>
        <img
          alt="Award_Test"
          class="image"
          src="https://bmipimngqa.azureedge.net/sys-master-hybris-media/h88/h6b/9020240789534/Test-Awardpng"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`AboutLeadBlock tests should not render if no systemBenefits 1`] = `
<div>
  <div
    class="MuiGrid-root aboutLeadBlock LeadBlock MuiGrid-container MuiGrid-spacing-xs-3"
  >
    <div
      class="MuiGrid-root LeadBlockContent MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-8"
    >
      <div
        class="LeadBlockContentSection"
      >
        <div
          class="MuiTypography-root Typography MuiTypography-body1"
        >
          <p>
            Long Dec System 1 NO
          </p>
        </div>
      </div>
      <div
        class="guaranteesAndAwardsAsset LeadBlockContentSection"
      >
        <h5
          class="MuiTypography-root LeadBlockContentHeading Typography MuiTypography-h5"
        >
          MC: sdp.leadBlock.guaranteesWarranties
        </h5>
        <img
          alt="Garanti Test"
          class="image"
          src="https://bmipimngqa.azureedge.net/sys-master-hybris-media/hc2/h3e/8972787286046/Monier-garanti-30-aarjpg"
        />
      </div>
      <div
        class="guaranteesAndAwardsAsset LeadBlockContentSection"
      >
        <h5
          class="MuiTypography-root LeadBlockContentHeading Typography MuiTypography-h5"
        >
          MC: sdp.leadBlock.awardsCertificates
        </h5>
        <img
          alt="Award_Test"
          class="image"
          src="https://bmipimngqa.azureedge.net/sys-master-hybris-media/h88/h6b/9020240789534/Test-Awardpng"
        />
      </div>
    </div>
    <div
      class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-4"
    >
      <div
        class="ColorPair ColorPair--pearl"
      >
        <div
          class="PostItCard"
        >
          <div
            class="section"
          >
            <h4
              class="MuiTypography-root Typography MuiTypography-h4"
            >
              <h4
                class="MuiTypography-root Typography Typography--underline MuiTypography-h4"
              >
                Key Features
              </h4>
            </h4>
            <div
              class="content"
            >
              <ul
                class="IconList"
              >
                <li
                  class="ListItem ListItem--isCompact"
                >
                  <div
                    class="icon"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root blueCheckIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
                      />
                    </svg>
                  </div>
                  <div
                    class="content"
                  >
                    <p
                      class="MuiTypography-root title Typography MuiTypography-body1"
                    >
                      Sample KF value
                    </p>
                  </div>
                </li>
                <li
                  class="ListItem ListItem--isCompact"
                >
                  <div
                    class="icon"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root blueCheckIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
                      />
                    </svg>
                  </div>
                  <div
                    class="content"
                  >
                    <p
                      class="MuiTypography-root title Typography MuiTypography-body1"
                    >
                      Sample KF value 2
                    </p>
                  </div>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AboutLeadBlock tests should render 1`] = `
<div>
  <div
    class="MuiGrid-root aboutLeadBlock LeadBlock MuiGrid-container MuiGrid-spacing-xs-3"
  >
    <div
      class="MuiGrid-root LeadBlockContent MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-8"
    >
      <div
        class="LeadBlockContentSection"
      >
        <div
          class="MuiTypography-root Typography MuiTypography-body1"
        >
          longDescription
        </div>
      </div>
      <div
        class="guaranteesAndAwardsAsset LeadBlockContentSection"
      >
        <h5
          class="MuiTypography-root LeadBlockContentHeading Typography MuiTypography-h5"
        >
          MC: sdp.leadBlock.guaranteesWarranties
        </h5>
        <img
          alt="Garanti Test"
          class="image"
          src="https://bmipimngqa.azureedge.net/sys-master-hybris-media/hc2/h3e/8972787286046/Monier-garanti-30-aarjpg"
        />
      </div>
      <div
        class="guaranteesAndAwardsAsset LeadBlockContentSection"
      >
        <h5
          class="MuiTypography-root LeadBlockContentHeading Typography MuiTypography-h5"
        >
          MC: sdp.leadBlock.awardsCertificates
        </h5>
        <img
          alt="Award_Test"
          class="image"
          src="https://bmipimngqa.azureedge.net/sys-master-hybris-media/h88/h6b/9020240789534/Test-Awardpng"
        />
      </div>
    </div>
    <div
      class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-4"
    >
      <div
        class="ColorPair ColorPair--pearl"
      >
        <div
          class="PostItCard"
        >
          <div
            class="section"
          >
            <h4
              class="MuiTypography-root Typography MuiTypography-h4"
            >
              <h4
                class="MuiTypography-root Typography Typography--underline MuiTypography-h4"
              >
                Key Features
              </h4>
            </h4>
            <div
              class="content"
            >
              <ul
                class="IconList"
              >
                <li
                  class="ListItem ListItem--isCompact"
                >
                  <div
                    class="icon"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root blueCheckIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
                      />
                    </svg>
                  </div>
                  <div
                    class="content"
                  >
                    <p
                      class="MuiTypography-root title Typography MuiTypography-body1"
                    >
                      Sample KF value
                    </p>
                  </div>
                </li>
                <li
                  class="ListItem ListItem--isCompact"
                >
                  <div
                    class="icon"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root blueCheckIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
                      />
                    </svg>
                  </div>
                  <div
                    class="content"
                  >
                    <p
                      class="MuiTypography-root title Typography MuiTypography-body1"
                    >
                      Sample KF value 2
                    </p>
                  </div>
                </li>
              </ul>
            </div>
          </div>
          <div
            class="section"
          >
            <h4
              class="MuiTypography-root Typography MuiTypography-h4"
            >
              <h4
                class="MuiTypography-root Typography Typography--underline MuiTypography-h4"
              >
                MC: sdp.leadBlock.systemBenefits
              </h4>
            </h4>
            <div
              class="content"
            >
              <ul
                class="IconList"
              >
                <li
                  class="ListItem ListItem--isCompact"
                >
                  <div
                    class="icon"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root blueCheckIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
                      />
                    </svg>
                  </div>
                  <div
                    class="content"
                  >
                    <p
                      class="MuiTypography-root title Typography MuiTypography-body1"
                    >
                      Benefit value 1
                    </p>
                  </div>
                </li>
                <li
                  class="ListItem ListItem--isCompact"
                >
                  <div
                    class="icon"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root blueCheckIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
                      />
                    </svg>
                  </div>
                  <div
                    class="content"
                  >
                    <p
                      class="MuiTypography-root title Typography MuiTypography-body1"
                    >
                      Benefit value 2
                    </p>
                  </div>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
